corrected put to patch http methods
